# miniscience-course

./: Readme.MD
fenics/: navier_stokes_wedge.py
gmsh/: torus.cpp  torus.msh  wine.cpp  wine.stl
phased-array/: CalcMesh.py  main.py
vtk/: CMakeLists.txt  wine.cpp
